Get rid of remaining contractions
Fixes #14

--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -41,7 +41,7 @@
   \item[QtWebEngine]{The \emph{backend} used by default in qutebrowser, based on
       the Chromium project (like the Chrome web browser).}
   \item[QtWebKit]{One of two possible \emph{backends} qutebrowser can use.
-      QtWebKit is the older backend, which isn't used by default anymore, but is
+      QtWebKit is the older backend, which is not used by default anymore, but is
       still supported.}
   \item[SA]{Studienarbeit (Student research project)}
   \item[slot] A slot is the method or function connected to a \emph{signal} in
