--- a/doc/projmanagement.tex
+++ b/doc/projmanagement.tex
@@ -37,7 +37,7 @@ sole author of this student research project. He has been working on qutebrowser
 December 2013 and started studying Computer Science at HSR in 2016.
 
 \emph{Joël Schwab} intended to co-author this research project, but
-unfortunately didn't pass some exams, which were a precondition to be allowed to
+unfortunately did not pass some exams, which were a precondition to be allowed to
 do the SA project this semester.
 
 Professor \emph{Stefan Keller}, institute partner at the Institute for Software
@@ -80,7 +80,7 @@ is allotted as shown in figure \ref{img:schedule}.
 
 Due to the relatively long \emph{preparation} phase at the beginning of the
 project, the \emph{construction} phase gets unusually short. This is
-unfortunate but unavoidable -- it's important to integrate existing
+unfortunate but unavoidable -- it is important to integrate existing
 contributions before starting to refactor the existing code, at least for
 third-party changes which would lead to conflicts with refactoring changes.
 
@@ -252,27 +252,27 @@ The following measures have been taken to mitigate those risks:
 Since some of these risks are hard to quantify in hours lost (such as ``too many
 external contributions''), a probability between 1 and 5 has been assigned instead.
 
-As explained in section \ref{context}, it's expected that third-party
+As explained in section \ref{context}, it is expected that third-party
 contributors continue to submit changes (in the form of pull requests) while
 this SA is ongoing. An
 announcement\footnote{\url{https://lists.schokokeks.org/pipermail/qutebrowser-announce/2018-October/000053.html},
   accessed 2018-11-12} was sent out, asking contributors to cut back external
 contributions. However, a similar announcement was sent out during past exam
 seasons, with mixed results -- many contributors continue to submit changes
-regardless. Initially, there's a phase focused on merging existing
+regardless. Initially, there is a phase focused on merging existing
 contributions (see the project schedule in section \ref{schedule}). Afterwards,
 contributions are dealt with on a best effort basis, being ignored if they
 are non-trivial.
 
-There's little time in the construction phase compared to other projects.
+There is little time in the construction phase compared to other projects.
 Additionally, this SA is written by a single author. Thus, sickness or other
 obstructions have a bigger than usual impact. This is counteracted by trying to
 keep the scope of the SA clear, but flexible. Additionally, buffer time is
 added after the preparation and construction phases in the project schedule
 (section \ref{schedule}).
 
-If some preparatory work isn't finished fully, it's possible that upcoming
+If some preparatory work is not fully finished, it is possible that upcoming
 changes cause incompatible changes in the extension API. However, this SA
 is focused on moving core code into extensions, rather than providing an
-extension API for third-party extensions. Therefore, it's still possible to make
+extension API for third-party extensions. Therefore, it is still possible to make
 those changes after the SA is finished, without breaking third-party code.
