--- a/doc/requirements.tex
+++ b/doc/requirements.tex
@@ -7,7 +7,7 @@
 \section{Use Cases}
 
 This project extends an existing codebase with an extension API rather
-than starting a new project from scratch. By its nature, it's difficult to
+than starting a new project from scratch. By its nature, it is difficult to
 predict how an extension API will be used in the future. Because of that, an
 use-case diagram would not adequately describe the motivation for the extension
 API.
