--- a/doc/evaluation.tex
+++ b/doc/evaluation.tex
@@ -57,7 +57,7 @@ facility\footnote{\url{https://doc.qt.io/qt-5/signalsandslots.html}} over a
 callback-based API.
 \end{description}
 
-In addition to the mentioned external forces, it's helpful to have a set of
+In addition to the mentioned external forces, it is helpful to have a set of
 self-imposed design guidelines in mind when designing an API. For this project,
 it was decided to adopt the \emph{``Characteristics of good APIs''} listed in
 Jasmin~Blanchette's \emph{Little Manual of API Design}
@@ -73,8 +73,8 @@ Jasmin~Blanchette's \emph{Little Manual of API Design}
   \item[Hard to misuse:] A well-designed API should assist its user in
     writing correct and clear code. 
   \item[Easy to extend:] New concepts will appear over time, and existing
-    APIs will grow. While it's hard to anticipate the future, future
-    extendability should be taken into account while designing an API.
+    APIs will grow. While it is hard to anticipate future changes, they
+    should be taken into account while designing an API.
   \item[Complete:] The manual claims \emph{``Ideally, an API should be
     complete and let users do everything they want.''}. However, this statement
     is later revised by adding \emph{``Completeness is also something that can appear
