--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -65,6 +65,17 @@ The original task description for this project (written in German) can be found 
 \label{ch:aufgabenstellung}
 \includepdf[pages=-,pagecommand=]{./img/SA_Bruhin_Aufgabenstellung_v2.pdf}
 
+\chapter{Urheber- und Nutzungsrechte}
+Die Urheber- und Nutzungsrechte an der Software dieser Studierendenarbeit (nachfolgend ‚Arbeit’ genannt) sind im entsprechenden Software-Repository geregelt. Die Urheber- und Nutzungsrechte aller anderen Artefakte der Arbeit sind wie folgt geregelt: Die
+Schutzrechte und das Know-how an den in diesem Rahmen geschaffenen Gütern (ausser Software, vgl. oben), stehen sowohl dem Rechtsträger der HSR Hochschule für Technik Rapperswil, dem für die Arbeit verantwortlichen Professoren, den allfällig beteiligten
+Projektpartnern, sowie den Verfassern der Arbeit resp. Entwickler der in diesem Rahmen geschaffenen Güter zu. Die genannten Parteien übertragen sich gegenseitig nicht exklusiv, jedoch unentgeltlich, weltweit, sachlich und zeitlich unbeschränkt die
+jeweiligen Schutzrechte und das Know-how an der Arbeit und an der in diesem Rahmen geschaffenen Güter, einschliesslich dem Recht zur Weiterübertragung, ab. Entsprechend steht es jeder Partei zu, sämtliche Schutzrechte an der Arbeit resp. an der in diesem
+Rahmen geschaffenen Güter beliebig weltweit, zeitlich und sachlich unbeschränkt zu verwerten. Darunter fällt namentlich aber nicht abschliessend das Recht zur Lizenzierung in jeder Art, Umfang und Form, das Recht zur Bearbeitung und damit zur Nutzung als
+Grundlage eines neuen schutzfähigen Guts. Die Parteien erklären sich gegenseitig den Verzicht auf Namensnennung bei der Verwertung der Schutzrechte und des Know-how durch eine oder mehrere Parteien gemeinsam und stimmen namentlich zu, dass jede Partei
+allein unter ihrem eigenem Namen die Schutzrechte resp. das Know-how verwertet. Die vorliegende gegenseitige unentgeltliche Übertragung der Schutzrechte resp. des Know-how bezieht sich auch auf Verwertungsarten, welche heute noch nicht bekannt sind.
+
+
+
 \chapter{Test log}
 \label{ch:testlog}
 \begin{minted}{text}
