--- a/doc/results.tex
+++ b/doc/results.tex
@@ -208,6 +208,10 @@ defined in the schedule on page \pageref{img:schedule} are clearly apparent:
   \caption{Time tracking categories per week}
 \end{figure}
 
+Time was tracked using Clockify\footnote{\url{https://www.clockify.me/}}.
+Analysis and visualization of the resulting data was done via a custom Python
+script and the Bokeh\footnote{\url{https://bokeh.pydata.org/}} library.
+
 
 % Codestatistik (Zeilen: Kommentare, Klassen, Packages)
 \section{Code Statistics}
